API Documentation updated
- Added /api in routes
- Added new route for houses
